# opengl-game-engine

./: .gitignore  CMakeLists.txt  README.md  run.sh
assets/shaders/: 1.colors.fs  1.colors.vs  1.light_cube.fs  1.light_cube.vs  fragment.shader  light.frag  light.vert  vertex.shader
include/: Camera.h  Shader.h
src/: Shader.cpp  lighting.cpp  main.cpp  sphere.cpp  stb_image.cpp
